--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node ./backend/server",
-    "dev": "node --watch --env-file=.env ./backend/server"
+    "dev": "node ./backend/server"
   },
   "keywords": [],
   "author": "",
