--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/$1" },
+    { "src": "/api/(.*)", "dest": "/" },
     { "handle": "filesystem" }
   ]
 }
