--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node ./backend/server",
-    "dev": "node ./backend/server"
+    "dev": "node --watch --env-file=.env ./backend/server"
   },
   "keywords": [],
   "author": "",
