--- a/vercel.json
+++ b/vercel.json
@@ -2,12 +2,14 @@
   "version": 2,
   "builds": [
     {
-      "src": "backend/package.json",
+      "src": "./index.js",
       "use": "@vercel/node"
     }
   ],
   "routes": [
-    { "src": "/api/(.*)", "dest": "/backend/$1" },
-    { "handle": "filesystem" }
+    {
+      "src": "/(.*)",
+      "dest": "/"
+    }
   ]
 }
