--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@hello-pangea/dnd": "^16.6.0",
+    "cli": "^1.0.1",
     "next": "14.2.4",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "vercel": "^32.3.0"
   },
   "devDependencies": {
     "postcss": "^8",
