--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,3 +1,3 @@
 {
-  "rewrites": [{ "source": "/(.*)", "destination": "https://mern-todo-kanban-production.up.railway.app" }]
+  "rewrites": [{ "source": "https://mern-todo-kanban-production.up.railway.app/", "destination": "https://mern-todo-kanban-production.up.railway.app" }]
 }
