--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cookies-next": "^4.2.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "universal-cookie": "^7.1.4"
