--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "firebase": "^10.12.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
     "universal-cookie": "^7.1.4"
